<resources>
    <string name="app_name">Sample API demo</string>
    <string name="open_navigation_drawer">Open Navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="mnu_option_reports_title">Reports</string>
    <string name="mnu_option_products_title">Products</string>
    <string name="mnu_option_shop_fragment">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is the SHOP Fragment</string>
    <string name="first_slide_title">Title 1</string>
    <string name="second_slide_title">Title 2</string>
    <string name="third_slide_title">Title 3</string>
    <string name="first_slide_desc">Description one where you can specify more information</string>
    <string name="second_slide_desc">Description two where you can specify more information</string>
    <string name="third_slide_desc">Description one where you can specify more information</string>
    <string name="lets_go_btn">Lets Go!</string>
    <string name="security">Security</string>
    <string name="cleaning">Cleaning</string>
    <string name="admin">Administration</string>
    <string name="other">Other</string>
    <string name="donate">Donate</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="archived">Archived</string>
    <string name="statistics">Statistics</string>

</resources>